@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Add PDF bookmarks to result graphs on PDF result file generation
 pts-core: Add automated executive summary of result files via executive-summary sub-command and PDF result export
+pts-core: Add remove-result-from-result-file sub-command (slightly different from remove-results-from-result-file)
 
 Phoronix Test Suite 9.4.0 Milestone 2
 5 February 2020
